Fixing spacing on header and title show and hide

--- a/static/assets/css/screen.css
+++ b/static/assets/css/screen.css
@@ -274,7 +274,6 @@ blockquote p {
 article>header {
     display: flex;
     flex-direction: column-reverse;
-    padding-top: 3rem
 }
 
 article>header time {
